--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 
 <p>There are a large number of astronomical equipment here, the most notable of which is the Celetron C14 and Paramount MX.</p>
 
-<h3 id="practice-base">实践基地  Practice Base</h3>
+<h3 id="practical-base">实践基地  Practical Base</h3>
 
 <p><img src="jntc.jpg" /></p>
 
 <p>我们也拥有一个环境不错的活动实践基地，位于浙江省湖州市安吉县天荒坪镇的江南天池风景区。</p>
 
-<p>We also have a practice base with good environment, located in Jiangnantianchi, Tianhuangping, Anji, Huzhou, Zhejiang Province, China.</p>
+<p>We also have a practical base with good environment, located in Jiangnantianchi, Tianhuangping, Anji, Huzhou, Zhejiang Province, China.</p>
 
 <p>假期我们都会组织一些上山活动，前往江南天池天文台进行观测。</p>
 
