--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           
-          <h1 id="project_title">杭十四中天文社 Hangzhou No.14 High School Astronomy Association</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">杭十四中天文社</h1>
+          <h2 id="project_tagline">Hangzhou No.14 High School Astronomy Association</h2>
 
           
         </header>
@@ -45,7 +45,7 @@
 
 <p><img src="tws.jpg" /></p>
 
-<h3 id="about-us">关于我们  About us</h3>
+<h3 id="about-us">关于我们 About us</h3>
 
 <p>我们正式成立于2014年，是杭州市天文学会的会员单位，也是杭州市高中天文联合会的创始单位。</p>
 
@@ -55,7 +55,7 @@
 
 <p>We are committed to astronomy and astrophotography, and we have achieved good results in astronomy Olympiad.</p>
 
-<h3 id="observatory">天文台  Observatory</h3>
+<h3 id="observatory">天文台 Observatory</h3>
 
 <p><img src="fqo.jpg" /></p>
 
@@ -67,7 +67,7 @@
 
 <p>There are a large number of astronomical equipment here, the most notable of which is the Celetron C14 and Paramount MX.</p>
 
-<h3 id="practical-base">实践基地  Practical Base</h3>
+<h3 id="practical-base">实践基地 Practical Base</h3>
 
 <p><img src="jntc.jpg" /></p>
 
@@ -79,7 +79,7 @@
 
 <p>During the holidays, we will organize some observation activities to the Jiangnantianchi Observatory.</p>
 
-<h3 id="contact-us">联系我们  Contact Us</h3>
+<h3 id="contact-us">联系我们 Contact Us</h3>
 
 <p>Email: <a href="mailto:h14ztws@126.com">h14ztws@126.com</a></p>
 
@@ -87,7 +87,7 @@
 
 <p>Bilibili: <a href="https://space.bilibili.com/317033762">https://space.bilibili.com/317033762</a></p>
 
-<script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5ad2ow7ls5f&amp;m=7&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
+<script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=55qmfw9sdgy&amp;m=7&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
 
       </section>
     </div>
