--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h2 id="welcome">欢迎  Welcome</h2>
+        
+<p><img src="tws.jpg" /></p>
 
 <p>我们是浙江省杭州第十四中学天文社，在这里你可以了解有关我们的人和事。</p>
 
 <p>Here is Zhejiang Province Hangzhou No.14 High School Astronomy Association. You can learn something about us.</p>
 
-<p><img src="tws.jpg" /></p>
-
 <h3 id="about-us">关于我们 About us</h3>
+
+<p><img src="hz.jpg" /></p>
 
 <p>我们正式成立于2014年，是杭州市天文学会的会员单位，也是杭州市高中天文联合会的创始单位。</p>
 
