--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
+    <link href="favicon.ico" rel="shortcut icon">
     <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/style.css?v=3a18f16609463ea67e5da6f62720f97137e0531a">
 
 <!-- Begin Jekyll SEO tag v2.6.1 -->
@@ -47,8 +48,6 @@
 
 <h3 id="about-us">关于我们 About us</h3>
 
-<p><img src="hz.jpg" /></p>
-
 <p>我们正式成立于2014年，是杭州市天文学会的会员单位，也是杭州市高中天文联合会的创始单位。</p>
 
 <p>We were founded in 2014. We are a member of Hangzhou Astronomical Society(HZAS) and the founding unit of Hangzhou High-school Astronomical Associations Union(HHAAU).</p>
@@ -56,6 +55,8 @@
 <p>我们致力于天文科普和天文摄影，组织策划了许多天文活动。</p>
 
 <p>We are committed to astronomy and astrophotography, and we have organized many activities about astronomy.</p>
+
+<p><img src="hz.jpg" /></p>
         
 <p>我们也在天文奥赛中取得了不错的成绩，多次闯入全国中学生天文奥赛决赛，多人荣获浙江省天文奥赛一等奖。</p>
 
@@ -88,6 +89,8 @@
 <p>假期我们都会组织一些上山活动，前往江南天池天文台进行观测。</p>
 
 <p>During the holidays, we will organize some observation activities to the Jiangnantianchi Observatory.</p>
+
+<p><img src="thp.jpg" /></p>
 
 <h3 id="contact-us">联系我们 Contact Us</h3>
 
