--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
+    <link href="favicon.ico" rel="icon">
     <link href="favicon.ico" rel="shortcut icon">
     <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/style.css?v=3a18f16609463ea67e5da6f62720f97137e0531a">
 
@@ -40,11 +41,11 @@
       <section id="main_content" class="inner">
         <h2 id="welcome">欢迎  Welcome</h2>
         
-<p><img src="tws.jpg" /></p>
-
 <p>我们是浙江省杭州第十四中学天文社，在这里你可以了解有关我们的人和事。</p>
 
 <p>Here is Zhejiang Province Hangzhou No.14 High School Astronomy Association. You can learn something about us.</p>
+
+<p><img src="tws.jpg" /></p>
 
 <h3 id="about-us">关于我们 About us</h3>
 
@@ -89,8 +90,6 @@
 <p>假期我们都会组织一些上山活动，前往江南天池天文台进行观测。</p>
 
 <p>During the holidays, we will organize some observation activities to the Jiangnantianchi Observatory.</p>
-
-<p><img src="thp.jpg" /></p>
 
 <h3 id="contact-us">联系我们 Contact Us</h3>
 
