--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <link href="favicon.ico" rel="icon">
-    <link href="favicon.ico" rel="shortcut icon">
+    <link href="https://h14ztws.github.io/favicon.ico" rel="icon">
+    <link href="https://h14ztws.github.io/favicon.ico" rel="shortcut icon">
     <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/style.css?v=3a18f16609463ea67e5da6f62720f97137e0531a">
 
 <!-- Begin Jekyll SEO tag v2.6.1 -->
@@ -48,6 +48,8 @@
 <p><img src="tws.jpg" /></p>
 
 <h3 id="about-us">关于我们 About us</h3>
+
+<p><img src="sshz.jpg" /></p>
 
 <p>我们正式成立于2014年，是杭州市天文学会的会员单位，也是杭州市高中天文联合会的创始单位。</p>
 
