--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <p>We are committed to astronomy and astrophotography, and we have organized many activities about astronomy.</p>
 
-<p><img src="hz.jpg" /></p>
+<p><img src="hy.jpg" /></p>
         
 <p>我们也在天文奥赛中取得了不错的成绩，多次闯入全国中学生天文奥赛决赛，多人荣获浙江省天文奥赛一等奖。</p>
 
@@ -75,9 +75,13 @@
 
 <p>Hangzhou No.14 High School is located by the beautiful West Lake, at the foot of Baoshi Mountain. Our observatory is located on campus, at the top of the 2nd teaching building.</p>
 
-<p>这里拥有大量的天文仪器设备，其中最引人注目的当属杭州市最大的施卡望远镜——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。</p>
+<p>这里拥有许多的天文仪器设备，其中最引人注目的当属杭州市最大的施卡望远镜——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。</p>
 
-<p>There are a large number of astronomical equipment here, the most notable of which is the Celetron C14 and Paramount MX.</p>
+<p>There are many astronomical equipments here, the most notable of which is the Celetron C14 and Paramount MX.</p>
+
+<p>受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。</p>
+
+<p>Limited by the light pollution in Hangzhou, we now use them for teaching, observation and astrophotography.</p>
 
 <h3 id="practical-base">实践基地 Practical Base</h3>
 
@@ -92,6 +96,10 @@
 <p>During the holidays, we will organize some observation activities to the Jiangnantianchi Observatory.</p>
 
 <h3 id="contact-us">联系我们 Contact Us</h3>
+
+<p>如果您有任何想法和问题，或者想了解更多关于我们的信息，欢迎与我们联系。</p>
+
+<p>If you have any ideas or questions, or want to learn more about us, please contact us.</p>
 
 <p>Email: <a href="mailto:h14ztws@126.com">h14ztws@126.com</a></p>
 
