--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 <p>We were founded in 2014. We are a member of Hangzhou Astronomical Society(HZAS) and the founding unit of Hangzhou High-school Astronomical Associations Union(HHAAU).</p>
 
-<p>我们致力于天文科普和天文摄影，组织策划了许多天文活动。</p>
+<p>我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团的称号。</p>
 
-<p>We are committed to astronomy and astrophotography, and we have organized many activities about astronomy.</p>
+<p>We are committed to astronomy and astrophotography, and we have organized many activities about astronomy. We are the Top Ten Outstanding Societies for Primary and Middle School Students in Hangzhou.</p>
 
 <p><img src="hy.jpg" /></p>
         
