--- a/index.html
+++ b/index.html
@@ -31,19 +31,12 @@
           
           <h1 id="project_title">杭十四中天文社</h1>
           <h2 id="project_tagline">Hangzhou No.14 High School Astronomy Association</h2>
-          <div class="wrapper">
-            <nav class="site-nav">
-              <ul class="menu">
-                <li><a href="/about/" class="page-link">About</a>
-                  <ul class="sub-menu">
-                    <li><a href="/member/">Member</a></li>
-                    <li><a href="/h14z/">Hangzhou No.14 High School</a></li>
-                  </ul>
-                </li>
-                <li><a href="/observatory/" class="page-link">Observatory</a></li>
-              </ul>
-            </nav>
-          </div>
+          <table>
+            <tr>
+              <td>About</td>
+              <td>Observatory</td>
+            </tr>
+          </table>
           
         </header>
     </div>
