--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about-us">About Us</a>
+                        <a href="#about">About Us</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#observatory">Observatory</a>
@@ -109,7 +109,7 @@
     </header>
     
      <!-- About Section -->
-    <section class="success" id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -144,11 +144,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p> Hangzhou No.14 High School is located by the beautiful West Lake, at the foot of Baoshi Mountain. Our observatory is located on campus, at the top of the 2nd teaching building. There are many astronomical equipments here, the most notable of which is the Celetron C14 and Paramount MX. Limited by the light pollution in Hangzhou, we now use them for teaching, observation and astrophotography.
-                    </p>
+                    <p style="color: #fff;">Hangzhou No.14 High School is located by the beautiful West Lake, at the foot of Baoshi Mountain. Our observatory is located on campus, at the top of the 2nd teaching building. There are many astronomical equipments here, the most notable of which is the Celetron C14 and Paramount MX. Limited by the light pollution in Hangzhou, we now use them for teaching, observation and astrophotography.</p>
                     </div>
                 <div class="col-lg-4">
-                    <p>杭十四中坐落在美丽的西湖旁，宝石山脚下。我们的天文台就位于校园内，在第二教学楼的顶端。这里拥有许多的天文仪器设备，其中最引人注目的当属杭州市最大的施卡望远镜——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。
+                    <p style="color: #fff;">杭十四中坐落在美丽的西湖旁，宝石山脚下。我们的天文台就位于校园内，在第二教学楼的顶端。这里拥有许多的天文仪器设备，其中最引人注目的当属杭州市最大的施卡望远镜——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
