--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>
-    Hangzhou No.14 High School Astronomy Association
+    Hangzhou No.14 High School Astronomy Association 杭十四中天文社
   </title>
   <meta name="viewport" content="width=device-width" />
   <meta name="description" content="Welcome! We are students' astronomy association in Hangzhou No.14 High School. Here is our home page!." />
@@ -94,12 +94,12 @@
     </nav>
         <!-- Header -->
     <header>
-        <div class="container">
+        <div class="container" style="background: #80B3FF;">
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive" src="tws.jpg" alt="">
                     <div class="intro-text">
-                        <span class="name">Hangzhou No.14 High School Astronomy Association</span>
+                        <span class="skills">Hangzhou No.14 High School Astronomy Association</span>
                         <hr class="star-light">
                         <span class="skills">杭十四中天文社</span>
                     </div>
@@ -119,11 +119,17 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p> We were founded in 2014. We are a member of Hangzhou Astronomical Society(HZAS) and the founding unit of Hangzhou High-school Astronomical Associations Union(HHAAU). We are committed to astronomy and astrophotography, and we have organized many activities about astronomy. We are the Top Ten Outstanding Societies for Primary and Middle School Students in Hangzhou. We have achieved good results in astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad(CNAO) for times. Many of us won the first prize of Zhejiang Province Astronomy Olympiad. Our members have been accepted by outstanding universities around the world, including Tsinghua University, UC Berkeley, Imperial College London, etc.
+                    <p> We were founded in 2014. We are a member of Hangzhou Astronomical Society(HZAS) and the founding unit of Hangzhou High-school Astronomical Associations Union(HHAAU).<br>
+                        We are committed to astronomy and astrophotography, and we have organized many activities about astronomy. We are the Top Ten Outstanding Societies for Primary and Middle School Students in Hangzhou.<br>
+                        We have achieved good results in astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad(CNAO) for times.<br>
+                        Many of us won the first prize of Zhejiang Province Astronomy Olympiad. Our members have been accepted by outstanding universities around the world, including Tsinghua University, UC Berkeley, Imperial College London, etc.
                     </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>我们正式成立于2014年，是杭州市天文学会的会员单位，也是杭州市高中天文联合会的创始单位。我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团等称号。我们也在天文奥赛中取得了不错的成绩，多次闯入全国中学生天文奥赛决赛，多人荣获浙江省天文奥赛一等奖。我们的成员被海内外的优秀大学录取，包括清华大学、加州大学伯克利分校、帝国理工学院等。
+                    <p>  我们正式成立于2014年，是杭州市天文学会的会员单位，也是杭州市高中天文联合会的创始单位。<br>
+                         我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团等称号。<br>
+                         我们也在天文奥赛中取得了不错的成绩，多次闯入全国中学生天文奥赛决赛，多人荣获浙江省天文奥赛一等奖。<br>
+                         我们的成员被海内外的优秀大学录取，包括清华大学、加州大学伯克利分校、帝国理工学院等。
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -144,10 +150,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p style="color: #fff;">Hangzhou No.14 High School is located by the beautiful West Lake, at the foot of Baoshi Mountain. Our observatory is located on campus, at the top of the 2nd teaching building. There are many astronomical equipments here, the most notable of which is the Celetron C14 and Paramount MX. Limited by the light pollution in Hangzhou, we now use them for teaching, observation and astrophotography.</p>
+                    <p style="color: #fff;">Hangzhou No.14 High School is located by the beautiful West Lake, at the foot of Baoshi Mountain. Our observatory is located on campus, at the top of the 2nd teaching building.<br>
+                                            There are many astronomical equipments here, the most notable of which is the Celetron C14 and Paramount MX.<br>
+                                            Limited by the light pollution in Hangzhou, we now use them for teaching, observation and astrophotography.
+                    </p>
                     </div>
                 <div class="col-lg-4">
-                    <p style="color: #fff;">杭十四中坐落在美丽的西湖旁，宝石山脚下。我们的天文台就位于校园内，在第二教学楼的顶端。这里拥有许多的天文仪器设备，其中最引人注目的当属杭州市最大的施卡望远镜——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。
+                    <p style="color: #fff;">杭十四中坐落在美丽的西湖旁，宝石山脚下。我们的天文台就位于校园内，在第二教学楼的顶端。<br>
+                                            这里拥有许多的天文仪器设备，其中最引人注目的当属杭州市最大的施卡望远镜——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。<br>
+                                            受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
