--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     </nav>
         <!-- Header -->
     <header>
-        <div class="container" style="background: #80B3FF;">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="tws.jpg" alt="">
+                    <img class="img-responsive" src="tws-new.jpg" alt="">
                     <div class="intro-text">
                         <span class="skills">Hangzhou No.14 High School Astronomy Association</span>
                         <hr class="star-light">
@@ -126,10 +126,10 @@
                     </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>  我们正式成立于2014年，是杭州市天文学会的会员单位，也是杭州市高中天文联合会的创始单位。<br>
-                         我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团等称号。<br>
-                         我们也在天文奥赛中取得了不错的成绩，多次闯入全国中学生天文奥赛决赛，多人荣获浙江省天文奥赛一等奖。<br>
-                         我们的成员被海内外的优秀大学录取，包括清华大学、加州大学伯克利分校、帝国理工学院等。
+                    <p>我们正式成立于2014年，是杭州市天文学会的会员单位，也是杭州市高中天文联合会的创始单位。<br><br>
+                       我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团等称号。<br><br>
+                       我们也在天文奥赛中取得了不错的成绩，多次闯入全国中学生天文奥赛决赛，多人荣获浙江省天文奥赛一等奖。<br><br>
+                       我们的成员被海内外的优秀大学录取，包括清华大学、加州大学伯克利分校、帝国理工学院等。
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
