--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="tws-new.jpg" alt="">
+                    <img class="img-responsive" src="tws.png" alt="">
                     <div class="intro-text">
                         <span class="skills">Hangzhou No.14 High School Astronomy Association</span>
                         <hr class="star-light">
@@ -178,12 +178,15 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-6">
                         <h3>Location</h3>
                         <p>Hangzhou No.14 High School Astronomy Association <br>
            580 Fengqi Rd., Xiacheng Dist., <br>
            Hangzhou, Zhejiang Province, China 310006 
                         </p>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=55qmfw9sdgy&amp;m=7&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Credits</h3>
