--- a/index.html
+++ b/index.html
@@ -119,16 +119,16 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p> We were founded in 2014. We are a member of Hangzhou Astronomical Society(HZAS) and the founding unit of Hangzhou High-school Astronomical Associations Union(HHAAU).<br>
-                        We are committed to astronomy and astrophotography, and we have organized many activities about astronomy. We are the Top Ten Outstanding Societies for Primary and Middle School Students in Hangzhou.<br>
-                        We have achieved good results in astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad(CNAO) for times.<br>
+                    <p> We were founded in 2014. We are a member of Hangzhou Astronomical Society(HZAS) and the founding unit of Hangzhou High-school Astronomical Associations Union(HHAAU).<br><br>
+                        We are committed to astronomy and astrophotography, and we have organized many activities about astronomy. We are the Top Ten Outstanding Societies for Primary and Middle School Students in Hangzhou.<br><br>
+                        We have achieved good results in astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad(CNAO) for times.<br><br>
                         Many of us won the first prize of Zhejiang Province Astronomy Olympiad. Our members have been accepted by outstanding universities around the world, including Tsinghua University, UC Berkeley, Imperial College London, etc.
                     </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>我们正式成立于2014年，是杭州市天文学会的会员单位，也是杭州市高中天文联合会的创始单位。<br><br>
-                       我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团等称号。<br><br>
-                       我们也在天文奥赛中取得了不错的成绩，多次闯入全国中学生天文奥赛决赛，多人荣获浙江省天文奥赛一等奖。<br><br>
+                    <p>我们正式成立于2014年，是杭州市天文学会的会员单位，也是杭州市高中天文联合会的创始单位。<br><br><br><br>
+                       我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团等称号。<br><br><br><br>
+                       我们也在天文奥赛中取得了不错的成绩，多次闯入全国中学生天文奥赛决赛，多人荣获浙江省天文奥赛一等奖。<br><br><br><br>
                        我们的成员被海内外的优秀大学录取，包括清华大学、加州大学伯克利分校、帝国理工学院等。
                     </p>
                 </div>
@@ -185,12 +185,8 @@
            Hangzhou, Zhejiang Province, China 310006 
                         </p>
                     </div>
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-6">
                         <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=55qmfw9sdgy&amp;m=7&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Credits</h3>
-                        <p>This website is based on Jekyll theme <a href="https://github.com/jeromelachaud/freelancer-heme">Freelancer</a></p>
                     </div>
                 </div>
             </div>
