--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
     <header>
         <div class="container">
             <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Welcome 欢迎</h2>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive" src="tws.png" alt="">
                     <div class="intro-text">
@@ -120,7 +127,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-8 col-lg-offset-2">
                     <p> We were founded in 2014. We are a member of Hangzhou Astronomical Society(HZAS) and the founding unit of Hangzhou High-school Astronomical Associations Union(HHAAU).<br><br>
                         我们正式成立于2014年，是杭州市天文学会的会员单位，也是杭州市高中天文联合会的创始单位。<br>
                         We are committed to astronomy and astrophotography, and we have organized many activities about astronomy. We are the Top Ten Outstanding Societies for Primary and Middle School Students in Hangzhou.<br>
