--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </section>
     
     <!-- Contact Section -->
-    <section id="Contact">
+    <section id="contact">
         <div class="container" style="background: #233140;">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -216,7 +216,7 @@
                         Email: <a href="mailto:h14ztws@126.com">h14ztws@126.com</a><br>
                         QQ: 1873144146<br>
                         Qzone: <a href="https://1873144146.qzone.qq.com">https://1873144146.qzone.qq.com</a><br>
-                        Bilibili: <a href="https://space.bilibili.com/317033762">https://space.bilibili.com/317033762</a><br>
+                        Bilibili: <a href="https://space.bilibili.com/317033762">https://space.bilibili.com/317033762</a><br><br>
                     </p>
                 </div>
             </div>
