--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p><img src="hy.jpg" /></p>
+                    <img class="img-responsive" src="hy.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -166,7 +166,7 @@
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p><img src="fqo.jpg" /></p>
+                    <img class="img-responsive" src="fqo.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -193,7 +193,8 @@
                     </p>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <p><img src="jntc.jpg" /><img src="thp.jpg" /></p>
+                    <img class="img-responsive" src="jntc.jpg" alt="">
+                    <img class="img-responsive" src="thp.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -211,7 +212,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <p style="color: #fff;">
-                        If you have any ideas or questions, or want to learn more about us, please contact us.<br>
+                        If you have any ideas or questions, or want to learn more about us, please contact us.<br><br>
                         如果您有任何想法和问题，或者想了解更多关于我们的信息，欢迎与我们联系。<br><br>
                         Email: <a href="mailto:h14ztws@126.com">h14ztws@126.com</a><br>
                         QQ: 1873144146<br>
