--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         我们的成员被海内外的优秀大学录取，包括清华大学、加州大学伯克利分校、帝国理工学院等。
                     </p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-8 col-lg-offset-4">
                     <img class="img-responsive" src="hy.jpg" alt="">
                 </div>
             </div>
@@ -165,7 +165,7 @@
                                             受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。
                     </p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-8 col-lg-offset-4">
                     <img class="img-responsive" src="fqo.jpg" alt="">
                 </div>
             </div>
@@ -192,7 +192,7 @@
                        假期我们都会组织一些上山活动，前往<a href="http://www.jntianchi.com/tianwentai/">江南天池天文台</a>进行观测。                       
                     </p>
                 </div>
-                <div class="col-lg-12 text-center">
+                <div class="col-md-12">
                     <img class="img-responsive" src="jntc.jpg" alt="">
                     <img class="img-responsive" src="thp.jpg" alt="">
                 </div>
