--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
                        假期我们都会组织一些上山活动，前往<a href="http://www.jntianchi.com/tianwentai/">江南天池天文台</a>进行观测。                       
                     </p>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-6">
                     <img class="img-responsive" src="jntc.jpg" alt="">
                 </div>
