--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                         我们的成员被海内外的优秀大学录取，包括清华大学、加州大学伯克利分校、帝国理工学院等。
                     </p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-4">
-                    <img class="img-responsive" src="hy.jpg" alt="">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <img class="img-responsive" src="/pic/hy.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -165,8 +165,8 @@
                                             受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。
                     </p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-4">
-                    <img class="img-responsive" src="fqo.jpg" alt="">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <img class="img-responsive" src="/pic/fqo.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -195,10 +195,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <img class="img-responsive" src="jntc.jpg" alt="">
+                    <img class="img-responsive" src="/pic/jntc.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
-                    <img class="img-responsive" src="thp.jpg" alt="">
+                    <img class="img-responsive" src="/pic/thp.jpg" alt="">
                 </div>
             </div>
         </div>
