--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <h1>Welcome 欢迎</h1>
                 </div>
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="tws.png" alt="">
+                    <img class="img-responsive" src="/pic/tws.png" alt="">
                     <div class="intro-text">
                         <span class="skills">Hangzhou No.14 High School Astronomy Association</span>
                         <hr class="star-light">
@@ -136,7 +136,7 @@
                         我们的成员被海内外的优秀大学录取，包括清华大学、加州大学伯克利分校、帝国理工学院等。
                     </p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-1">
+                <div class="col-lg-8 col-lg-offset-3">
                     <img class="img-responsive" src="/pic/hy.jpg" alt="">
                 </div>
             </div>
@@ -165,7 +165,7 @@
                                             受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。
                     </p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-1">
+                <div class="col-lg-8 col-lg-offset-3">
                     <img class="img-responsive" src="/pic/fqo.jpg" alt="">
                 </div>
             </div>
