--- a/members.html
+++ b/members.html
@@ -77,16 +77,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="https://h14ztws.github.io/#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#observatory">Observatory</a>
+                        <a href="https://h14ztws.github.io/#observatory">Observatory</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#base">Base</a>
+                        <a href="https://h14ztws.github.io/#base">Base</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="https://h14ztws.github.io/#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -94,24 +94,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-        <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h1>Welcome 欢迎</h1>
-                </div>
-                <div class="col-lg-12">
-                    <img class="img-responsive" src="tws.png" alt="">
-                    <div class="intro-text">
-                        <span class="skills">Hangzhou No.14 High School Astronomy Association</span>
-                        <hr class="star-light">
-                        <span class="skills">杭十四中天文社</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+    <!-- Header -->
     
     <!-- Members Section -->
     <div class="container">
