--- a/members.html
+++ b/members.html
@@ -112,9 +112,9 @@
                    我们对星空充满了向往，对天文学的各种方向感兴趣。<br><br>
                    Here is part of our members.<br><br>
                    下面是我们部分成员的简介。<br><br>
-                   Guidance Counselor 指导老师
+                   Guidance Counselor 指导老师<br>
                 </p>
-                <table>
+                <table border="1">
                     <tr>
                         <th>Haibin Wu 吴海斌</th>
                         <th>M.Sc. in Geography, Fujian Normal University</th>
