--- a/members.html
+++ b/members.html
@@ -95,6 +95,19 @@
         <!-- /.container-fluid -->
     </nav>
     <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="intro-text">
+                        <span class="skills">Hangzhou No.14 High School Astronomy Association</span>
+                        <hr class="star-light">
+                        <span class="skills">杭十四中天文社</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     
     <!-- Members Section -->
     <div class="container">
@@ -114,10 +127,10 @@
                    下面是我们部分成员的简介。<br><br>
                    Guidance Counselor 指导老师<br>
                 </p>
-                <table border="1">
+                <table>
                     <tr>
-                        <th>Haibin Wu 吴海斌</th>
-                        <th>M.Sc. in Geography, Fujian Normal University</th>
+                        <td>Haibin Wu 吴海斌</td>
+                        <td>M.Sc. in Geography, Fujian Normal University</td>
                     </tr>
                 </table>
             </div>
