--- a/members.html
+++ b/members.html
@@ -124,18 +124,21 @@
                    We are big fans of the starry sky, and interested in a variety of topics in astronomy.<br><br>
                    我们对星空充满了向往，对天文学的各种方向感兴趣。<br><br>
                    Here is part of our members.<br><br>
-                   下面是我们部分成员的简介。<br><br>
-                   Guidance Counselor 指导老师<br>
-                </p>
-                <table>
-                    <tr>
-                        <td>Haibin Wu 吴海斌</td>
-                        <td>M.Sc. in Geography, Fujian Normal University</td>
-                    </tr>
-                </table>
+                   下面是我们部分成员的简介。<br>                   
+                </p>               
             </div>
-            <div class="col-lg-8 col-lg-offset-3">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/hy.jpg" alt="">
+            <div class="col-lg-12 text-center">
+                <h4>Guidance Counselor 指导老师</h4>
+            </div>
+            <div class="col-lg-2 col-lg-offset-2">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/whb.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+                <p>Haibin Wu 吴海斌<br>
+                   M.Sc. in Geography, <a href="http://www.fjnu.edu.cn/english/">Fujian Normal University</a>, 2017<br>
+                   2017年，<a href="http://www.fjnu.edu.cn/">福建师范大学</a>地理科学学院，理学硕士<br>
+                   the Outstanding Counselor of Zhejiang Province Astronomy Olympiad, 2019<br>
+                   2019年，获得浙江省天文竞赛优秀指导教师奖<br>
             </div>
         </div>
     </div>
