--- a/members.html
+++ b/members.html
@@ -134,11 +134,11 @@
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/whb.jpg" alt="">
             </div>
             <div class="col-lg-6">
-                <p>Haibin Wu 吴海斌<br><br></p>
-                <p size="-2">M.Sc. in Geography, <a href="http://www.fjnu.edu.cn/english/">Fujian Normal University</a>, 2017<br>
+                <p>Haibin Wu 吴海斌<br></p>
+                <p size="4">M.Sc. in Geography, <a href="http://www.fjnu.edu.cn/english/">Fujian Normal University</a>, 2017<br>
                    2017年，<a href="http://www.fjnu.edu.cn/">福建师范大学</a>地理科学学院，理学硕士<br>
                    the Outstanding Counselor of Zhejiang Province Astronomy Olympiad, 2019<br>
-                   2019年，获得浙江省天文竞赛优秀指导教师奖<br></p>
+                   2019年，获得浙江省天文竞赛优秀指导教师奖<br><br></p>
             </div>
             <div class="col-lg-12 text-center">
                 <h4>Student Committee 理事会</h4>
@@ -147,25 +147,25 @@
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/chair.jpg" alt="">
             </div>
             <div class="col-lg-6">
-                <p>Yun Wang 王芸<br><br></p>
-                <p size="-2">President of Hangzhou No.14 High School Astronomy Association<br></p>
+                <p>Yun Wang 王芸<br></p>
+                <p size="4">President of Hangzhou No.14 High School Astronomy Association<br><br></p>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/chair.jpg" alt="">
             </div>
             <div class="col-lg-6">
-                <p>Yuming Cao 曹雨铭<br><br></p>
-                <p size="-2">Vice-President of Hangzhou No.14 High School Astronomy Association<br>
+                <p>Yuming Cao 曹雨铭<br></p>
+                <p size="4">Vice-President of Hangzhou No.14 High School Astronomy Association<br>
                     Vice-President of Hangzhou High-school Astronomical Associations Union(HHAAU)<br>
-                    the first prize of Zhejiang Province Astronomy Olympiad, 2019<br>
+                    the first prize of Zhejiang Province Astronomy Olympiad, 2019<br><br>
                 </p>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/chair.jpg" alt="">
             </div>
             <div class="col-lg-6">
-                <p>Yao Dong 董垚<br><br></p>
-                <p size="-2">Vice-President of Hangzhou No.14 High School Astronomy Association<br></p>
+                <p>Yao Dong 董垚<br></p>
+                <p size="4">Vice-President of Hangzhou No.14 High School Astronomy Association<br><br></p>
             </div>
         </div>
     </div>
