--- a/members.html
+++ b/members.html
@@ -135,10 +135,12 @@
             </div>
             <div class="col-lg-6">
                 <p>Haibin Wu 吴海斌<br></p>
-                <p size="4">M.Sc. in Geography, <a href="http://www.fjnu.edu.cn/english/">Fujian Normal University</a>, 2017<br>
-                   2017年，<a href="http://www.fjnu.edu.cn/">福建师范大学</a>地理科学学院，理学硕士<br>
-                   the Outstanding Counselor of Zhejiang Province Astronomy Olympiad, 2019<br>
-                   2019年，获得浙江省天文竞赛优秀指导教师奖<br><br></p>
+                <ul class="list-inline item-details">
+                    <li>M.Sc. in Geography, <a href="http://www.fjnu.edu.cn/english/">Fujian Normal University</a>, 2017</li>
+                    <li>2017年，<a href="http://www.fjnu.edu.cn/">福建师范大学</a>地理科学学院，理学硕士</li>
+                    <li>the Outstanding Counselor of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>2019年，获得浙江省天文竞赛优秀指导教师奖</li>
+                </ul>
             </div>
             <div class="col-lg-12 text-center">
                 <h4>Student Committee 理事会</h4>
