--- a/members.html
+++ b/members.html
@@ -139,36 +139,59 @@
                     <li>M.Sc. in Geography, <a href="http://www.fjnu.edu.cn/english/">Fujian Normal University</a>, 2017</li>
                     <li>2017年，<a href="http://www.fjnu.edu.cn/">福建师范大学</a>地理科学学院，理学硕士</li>
                     <li>the Outstanding Counselor of Zhejiang Province Astronomy Olympiad, 2019</li>
-                    <li>2019年，获得浙江省天文竞赛优秀指导教师奖</li>
+                    <li>2019年，浙江省天文奥赛优秀指导教师奖</li>
                 </ul>
             </div>
             <div class="col-lg-12 text-center">
                 <h4>Student Committee 理事会</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/chair.jpg" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/wy.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Yun Wang 王芸<br></p>
-                <p size="4">President of Hangzhou No.14 High School Astronomy Association<br><br></p>
+                <ul class="list-inline item-details">
+                    <li>President of Hangzhou No.14 High School Astronomy Association</li>
+                    <li>杭十四中天文社社长</li>
+                </ul>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/chair.jpg" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/cym.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Yuming Cao 曹雨铭<br></p>
-                <p size="4">Vice-President of Hangzhou No.14 High School Astronomy Association<br>
-                    Vice-President of Hangzhou High-school Astronomical Associations Union(HHAAU)<br>
-                    the first prize of Zhejiang Province Astronomy Olympiad, 2019<br><br>
-                </p>
+                <ul class="list-inline item-details">
+                    <li>Vice-President of Hangzhou No.14 High School Astronomy Association</li>
+                    <li>杭十四中天文社副社长</li>
+                    <li>Vice-President of Hangzhou High-school Astronomical Associations Union(HHAAU)</li>
+                    <li>杭州市高中天文联合会副理事长</li>
+                    <li>the first prize of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>2019年，浙江省天文奥赛高中组一等奖</li>
+                    <li>the third prize of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>2018年，浙江省天文奥赛高中组三等奖</li>
+                </ul>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/chair.jpg" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/dy.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Yao Dong 董垚<br></p>
-                <p size="4">Vice-President of Hangzhou No.14 High School Astronomy Association<br><br></p>
+                <ul class="list-inline item-details">
+                    <li>Vice-President of Hangzhou No.14 High School Astronomy Association</li>
+                    <li>杭十四中天文社副社长</li>
+                </ul>
             </div>
+            <div class="col-lg-2 col-lg-offset-2">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/shy.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+                <p>Haoyang Shao 邵昊洋<br></p>
+                <ul class="list-inline item-details">
+                    <li>Director of Hangzhou No.14 High School Astronomy Association</li>
+                    <li>杭十四中天文社理事</li>
+                    <li>the first prize of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>2019年，浙江省天文奥赛高中组一等奖</li>
+                </ul>
         </div>
     </div>
     
