--- a/members.html
+++ b/members.html
@@ -101,7 +101,6 @@
                 <div class="col-lg-12">
                     <div class="intro-text">
                         <span class="skills">Hangzhou No.14 High School Astronomy Association</span>
-                        <hr class="star-light">
                         <span class="skills">杭十四中天文社</span>
                     </div>
                 </div>
@@ -122,7 +121,7 @@
                 <p>Most of us are students of <a href="http://www.h14z.cn/category/id1755144009448654642.htm">Zhejiang Province Hangzhou No.14 High School</a>.<br><br>
                    我们的成员主要来自<a href="http://www.h14z.cn/">浙江省杭州第十四中学</a>。<br><br>
                    We are big fans of the starry sky, and interested in a variety of topics in astronomy.<br><br>
-                   我们对星空充满了向往，对天文学的各种方向感兴趣。<br><br>
+                   我们对星空充满了向往，对天文学的许多方向感兴趣。<br><br>
                    Here is part of our members.<br><br>
                    下面是我们部分成员的简介。<br><br>                 
                 </p>               
@@ -165,9 +164,9 @@
                     <li>杭十四中天文社副社长</li>
                     <li>Vice-President of Hangzhou High-school Astronomical Associations Union(HHAAU)</li>
                     <li>杭州市高中天文联合会副理事长</li>
-                    <li>the first prize of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>the First Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2019年，浙江省天文奥赛高中组一等奖</li>
-                    <li>the third prize of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>the Third Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2018年，浙江省天文奥赛高中组三等奖</li>
                 </ul>
             </div>
@@ -189,9 +188,27 @@
                 <ul class="list-inline item-details">
                     <li>Director of Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社理事</li>
-                    <li>the first prize of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>the First Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2019年，浙江省天文奥赛高中组一等奖</li>
                 </ul>
+            </div>
+            <div class="col-lg-12 text-center">
+                <h4>Adivser 顾问</h4>
+            </div>
+            <div class="col-lg-2 col-lg-offset-2">
+                <!img class="img-responsive" src="https://h14ztws.github.io/pic/wy.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+                <p>Zhichen Wang 王智琛（諦聽）<br></p>
+                <ul class="list-inline item-details">
+                    <li>Senior astronomy amateur</li>
+                    <li>资深天文爱好者</li>
+                    <li>Member of Hangzhou Astronomical Society(HZAS)</li>
+                    <li>杭州天文学会成员</li>
+                    <li>Honour Director of Hangzhou High-school Astronomical Associations Union(HHAAU)</li>
+                    <li>杭州市高中天文联合会名誉理事</li>
+                </ul>
+            </div>
         </div>
     </div>
     
