--- a/members.html
+++ b/members.html
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="skills">Hangzhou No.14 High School Astronomy Association</span>
+                        <span class="skills">Hangzhou No.14 High School Astronomy Association<br></span>
                         <span class="skills">杭十四中天文社</span>
                     </div>
                 </div>
@@ -135,10 +135,10 @@
             <div class="col-lg-6">
                 <p>Haibin Wu 吴海斌<br></p>
                 <ul class="list-inline item-details">
+                    <li>the Outstanding Counselor Award of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>2019年，浙江省天文奥赛优秀指导教师奖</li>
                     <li>M.Sc. in Geography, <a href="http://www.fjnu.edu.cn/english/">Fujian Normal University</a>, 2017</li>
                     <li>2017年，<a href="http://www.fjnu.edu.cn/">福建师范大学</a>地理科学学院，理学硕士</li>
-                    <li>the Outstanding Counselor of Zhejiang Province Astronomy Olympiad, 2019</li>
-                    <li>2019年，浙江省天文奥赛优秀指导教师奖</li>
                 </ul>
             </div>
             <div class="col-lg-12 text-center">
@@ -196,7 +196,7 @@
                 <h4>Adivser 顾问</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <!img class="img-responsive" src="https://h14ztws.github.io/pic/wy.jpg" alt="">
+                <!img class="img-responsive" src="https://h14ztws.github.io/pic/dt.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Zhichen Wang 王智琛（諦聽）<br></p>
@@ -207,6 +207,33 @@
                     <li>杭州天文学会成员</li>
                     <li>Honour Director of Hangzhou High-school Astronomical Associations Union(HHAAU)</li>
                     <li>杭州市高中天文联合会名誉理事</li>
+                </ul>
+            </div>
+            <div class="col-lg-12 text-center">
+                <h4>Former Committee 前任理事会</h4>
+            </div>
+            <div class="col-lg-4">
+                <ul class="list-inline item-details">
+                    <li>Jinyun Wang 王槿云</li>
+                    <li>Luhao Chen 陈渌浩</li>
+                    <li>Yi Chen 陈宜</li>
+                    <li>Hongchen Ye 叶泓辰</li>
+                </ul>
+            </div>
+            <div class="col-lg-4">
+                <ul class="list-inline item-details">
+                    <li>Yuzhe Jin 金禹哲</li>
+                    <li>Ruoming Zhang 章若茗</li>
+                    <li>Hao Zeng 曾浩</li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="col-lg-4">
+                <ul class="list-inline item-details">
+                    <li>Jialai Wang 王佳来</li>
+                    <li>Chong Zheng 郑翀</li>
+                    <li>Keyi Zheng 郑可轶</li>
+                    <li>Qixuan Wu 吴启轩</li>
                 </ul>
             </div>
         </div>
