--- a/members.html
+++ b/members.html
@@ -145,7 +145,7 @@
                 <h4>Student Committee 理事会</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/wy.jpg" alt="">
+                <!img class="img-responsive" src="https://h14ztws.github.io/pic/wy.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Yun Wang 王芸<br></p>
@@ -160,7 +160,7 @@
             <div class="col-lg-6">
                 <p>Yuming Cao 曹雨铭<br></p>
                 <ul class="list-inline item-details">
-                    <li>Vice-President of Hangzhou No.14 High School Astronomy Association</li>
+                    <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社副社长</li>
                     <li>Vice-President of Hangzhou High-school Astronomical Associations Union(HHAAU)</li>
                     <li>杭州市高中天文联合会副理事长</li>
@@ -171,12 +171,22 @@
                 </ul>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/dy.jpg" alt="">
+                <!img class="img-responsive" src="https://h14ztws.github.io/pic/dy.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Yao Dong 董垚<br></p>
                 <ul class="list-inline item-details">
-                    <li>Vice-President of Hangzhou No.14 High School Astronomy Association</li>
+                    <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
+                    <li>杭十四中天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-2 col-lg-offset-2">
+                <!img class="img-responsive" src="https://h14ztws.github.io/pic/cyc.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+                <p>Yiceng Cheng 程忆曾<br></p>
+                <ul class="list-inline item-details">
+                    <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社副社长</li>
                 </ul>
             </div>
@@ -234,6 +244,14 @@
                     <li>Chong Zheng 郑翀</li>
                     <li>Keyi Zheng 郑可轶</li>
                     <li>Qixuan Wu 吴启轩</li>
+                </ul>
+            </div>
+            <div class="col-lg-4">
+                <ul class="list-inline item-details">
+                    <li>Haonan Kong 孔皓楠</li>
+                    <li>Kaiwen Fang 方凯文</li>
+                    <li>Zixian Yang 杨子纤</li>
+                    <li></li>
                 </ul>
             </div>
         </div>
