--- a/members.html
+++ b/members.html
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="skills">Hangzhou No.14 High School Astronomy Association<br></span>
+                        <span class="skills"><br>Hangzhou No.14 High School Astronomy Association<br></span>
                         <span class="skills">杭十四中天文社</span>
                     </div>
                 </div>
@@ -118,10 +118,10 @@
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <p>Most of us are students of <a href="http://www.h14z.cn/category/id1755144009448654642.htm">Zhejiang Province Hangzhou No.14 High School</a>.<br><br>
-                   我们的成员主要来自<a href="http://www.h14z.cn/">浙江省杭州第十四中学</a>。<br><br>
-                   We are big fans of the starry sky, and interested in a variety of topics in astronomy.<br><br>
+                <p>We are big fans of the starry sky, and interested in a variety of topics in astronomy.<br><br>
                    我们对星空充满了向往，对天文学的许多方向感兴趣。<br><br>
+                   Most of us are students of <a href="http://www.h14z.cn/category/id1755144009448654642.htm">Zhejiang Province Hangzhou No.14 High School</a>.<br><br>
+                   我们的成员主要来自<a href="http://www.h14z.cn/">浙江省杭州第十四中学</a>。<br><br>
                    Here is part of our members.<br><br>
                    下面是我们部分成员的简介。<br><br>                 
                 </p>               
@@ -166,7 +166,7 @@
                     <li>杭州市高中天文联合会副理事长</li>
                     <li>the First Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2019年，浙江省天文奥赛高中组一等奖</li>
-                    <li>the Third Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>the Third Prize of Zhejiang Province Astronomy Olympiad, 2018</li>
                     <li>2018年，浙江省天文奥赛高中组三等奖</li>
                 </ul>
             </div>
