--- a/observatory.html
+++ b/observatory.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>
-    Members | Hangzhou No.14 High School Astronomy Association 杭十四中天文社
+    Observatory | Hangzhou No.14 High School Astronomy Association 杭十四中天文社
   </title>
   <meta name="viewport" content="width=device-width" />
   <link href="https://h14ztws.github.io/favicon.ico" rel="icon" type="image/x-icon">
@@ -120,7 +120,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <p>Our Observatory(Fengqi Observatory) located in Hangzhou No.14 High School, Xiacheng Dist., Hangzhou, Zhejiang Province, China (30°15'59.9"N ,120°09'16.0"E,Alt=35m).<br><br>
                    我们的天文台（凤起天文台）位于<a href="http://www.h14z.cn/">浙江省杭州第十四中学</a>凤起校区，地理坐标：东经120°09’16.0″，北纬30°15’59.9″，海拔35米。<br><br>
-                   <iframe width="500" height="400" frameborder="0" src="https://www.bing.com/maps/embed?h=400&w=500&cp=30.155990000000000~120.091600000000000lvl=17&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no"></iframe>
+                   <iframe width="500" height="400" frameborder="0" src="https://www.bing.com/maps/embed?h=400&w=500&cp=30.155990000000000~120.091600000000000lvl=17&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no"></iframe><br><br>
                    Fengqi Observatory was built in 20th century, and the whole observatory was completely upgraded in 2013.<br><br>
                    凤起天文台始建于20世纪，2013年天文台整体改造升级。<br><br>               
                 </p>
@@ -213,10 +213,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Old Photo of Observatory in 1990s 20世纪90年代天文台旧照</h2>
+                            <h2>Old Photo in 1990s 20世纪90年代天文台旧照</h2>
                             <hr class="star-primary">
                             <img src="pic/1990s.jpg" class="img-responsive img-centered" alt="image-alt">
-                            <p>Fengqi Observatory's old photo in 1990s, with the old dome.<dr>
+                            <p>Fengqi Observatory's old photo in 1990s, with the old dome.<dr><dr>
                                20世纪90年代，凤起天文台旧照。
                             </p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -238,10 +238,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Old Photo of Observatory in 2008 2008年天文台旧照</h2>
+                            <h2>Old Photo in 2008 2008年天文台旧照</h2>
                             <hr class="star-primary">
                             <img src="pic/2008.jpg" class="img-responsive img-centered" alt="image-alt">
-                            <p>Fengqi Observatory's old photo in 2008, with the old dome.<dr>
+                            <p>Fengqi Observatory's old photo in 2008, with the old dome.<dr><dr>
                                2008年，凤起天文台旧照。
                             </p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -265,8 +265,8 @@
                         <div class="modal-body">
                             <h2>The New Observatory 天文台新貌</h2>
                             <hr class="star-primary">
-                            <img src="pic/2008.jpg" class="img-responsive img-centered" alt="image-alt">
-                            <p>After the whole observatory was completely upgraded in 2013, Fengqi observatory looked well.(This photo was taken in 2016.)<dr>
+                            <img src="pic/2016.jpg" class="img-responsive img-centered" alt="image-alt">
+                            <p>After the whole observatory was completely upgraded in 2013, Fengqi observatory looked well.(This photo was taken in 2016.)<dr><dr>
                                在经过天文台整体改造升级后，凤起天文台焕然一新。（摄于2016年）
                             </p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
