--- a/observatory.html
+++ b/observatory.html
@@ -119,11 +119,13 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <p>Our Observatory(Fengqi Observatory) located in Hangzhou No.14 High School, Xiacheng Dist., Hangzhou, Zhejiang Province, China (30°15'59.9"N ,120°09'16.0"E,Alt=35m).<br><br>
-                   我们的天文台（凤起天文台）位于<a href="http://www.h14z.cn/">浙江省杭州第十四中学</a>凤起校区，地理坐标：东经120°09’16.0″，北纬30°15’59.9″，海拔35米。<br><br>
-                   <iframe width="500" height="400" frameborder="0" src="https://www.bing.com/maps/embed?h=400&w=500&cp=30.155990000000000~120.091600000000000lvl=17&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no"></iframe><br><br>
-                   Fengqi Observatory was built in 20th century, and the whole observatory was completely upgraded in 2013.<br><br>
-                   凤起天文台始建于20世纪，2013年天文台整体改造升级。<br><br>               
-                </p>
+                   我们的天文台（凤起天文台）位于<a href="http://www.h14z.cn/">浙江省杭州第十四中学</a>凤起校区，地理坐标：东经120°09’16.0″，北纬30°15’59.9″，海拔35米。<br></p>
+                <div>
+                    <iframe width="500" height="400" frameborder="0" src="https://www.bing.com/maps/embed?h=400&w=500&cp=30.264049129314728~120.15878065748258&lvl=16&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no">
+                    </iframe>
+                </div>
+                <p>Fengqi Observatory was built in 20th century, and the whole observatory was completely upgraded in 2013.<br><br>
+                   凤起天文台始建于20世纪，2013年天文台整体改造升级。<br></p>     
             </div>
             <div class="col-lg-8 col-lg-offset-2">
                 <div class="col-sm-4 portfolio-item">
@@ -213,12 +215,14 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Old Photo in 1990s 20世纪90年代天文台旧照</h2>
+                            <h2>Old Photo in 1990s</h2>
+                            <h3>20世纪90年代天文台旧照</h3>
                             <hr class="star-primary">
                             <img src="pic/1990s.jpg" class="img-responsive img-centered" alt="image-alt">
-                            <p>Fengqi Observatory's old photo in 1990s, with the old dome.<dr><dr>
-                               20世纪90年代，凤起天文台旧照。
-                            </p>
+                            <ul>
+                                <li>Fengqi Observatory's old photo in 1990s, with the old dome.</li>
+                                <li>20世纪90年代，凤起天文台旧照。</li>
+                            </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -238,7 +242,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Old Photo in 2008 2008年天文台旧照</h2>
+                            <h2>Old Photo in 2008</h2>
+                            <h3>2008年天文台旧照</h3>
                             <hr class="star-primary">
                             <img src="pic/2008.jpg" class="img-responsive img-centered" alt="image-alt">
                             <p>Fengqi Observatory's old photo in 2008, with the old dome.<dr><dr>
@@ -263,7 +268,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>The New Observatory 天文台新貌</h2>
+                            <h2>The New Observatory</h2>
+                            <h3>天文台新貌</h3>
                             <hr class="star-primary">
                             <img src="pic/2016.jpg" class="img-responsive img-centered" alt="image-alt">
                             <p>After the whole observatory was completely upgraded in 2013, Fengqi observatory looked well.(This photo was taken in 2016.)<dr><dr>
